--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Заголовок сторінки</title>>
+        <link type="text/css" rel="stylesheet" href="style.css"/>
     </head>
     <body>
         <p> Туторіял по роботі із Git. Редагування html файлу.</p>
