--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Заголовок сторінки</title>>
+        <script src="script.js"></script>
     </head>
     <body>
         <p> Туторіял по роботі із Git. Редагування html файлу.</p>
